--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "osinfo-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A scaffold tool for viewing operating system information.",
-  "main": "index.js",
+  "main": "bin/index.js",
   "bin": {
     "osinfo-cli": "./bin/index.js"
   },
